push-notifications/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: push-notifications
  labels:
    app: kubed
