push-notifications/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: push-notifications-svc
  namespace: push-notifications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: push-notifications-svc
  template:
    metadata:
      labels:
        app: push-notifications-svc
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: push-notifications-server
          image: registry.gitlab.com/goatlab/corporate/moutain/mountain/push-notifications-server:0.7
          imagePullPolicy: Always
          ports:
            - name: push-port
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: push-notifications-svc
  namespace: push-notifications
  labels:
    app: push-notifications-svc
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: push-http
  selector:
    app: push-notifications-svc
